fix(ui/button): button add white-space nowrap
affects: @varlet/ui

--- a/packages/varlet-ui/src/button/button.less
+++ b/packages/varlet-ui/src/button/button.less
@@ -52,6 +52,7 @@
   transition: box-shadow 0.2s;
   will-change: box-shadow;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  white-space: nowrap;
 
   &:active {
     box-shadow: 0 3px 5px -1px var(--shadow-key-umbra-opacity), 0 5px 8px 0 var(--shadow-key-penumbra-opacity),
